# astra-launcher

./: .env.example  .gitignore  Justfile  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  game_runner.rs  lib.rs  main.rs  updater.rs
src/styles/: global.css
